--- a/src/Components/BookCard/BookCard.css
+++ b/src/Components/BookCard/BookCard.css
@@ -7,13 +7,18 @@
 }
 .book-item{
     padding: 3rem 2rem;
-    border-radius: 4px;
-    background-color: var(--white-color);
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 5px 15px 0px;
+    border-radius: 15px;
+    background-color: #ebdcbd !important;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 10px 25px 0px;
     transition: var(--transition);
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
 }
 .book-item:hover{
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 10px 20px 0px;
+    color: #db4f4f;
 }
 .book-item-img img{
     max-width: 180px;
